@@ -96,9 +96,10 @@
       L648, 35:R#.26   @znote merida 山地车
       L654, 36:R#.27   @shader
       L700, 37:R#.28   @DirectX Tool Kit
-     Zndex_E : //z 2015-09-22 17:22:22 L.100'23858 T2601790291.K ~749 +----+----+----+----+----+
-     TimeCnt : //z 2015-09-22 17:22:20 L.100'23860 T2601790289.K ~34  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-09-22 17:22:14 L.100'23866 T2601790260.K ~29  +----+----+----+----+----+
+     Zndex_E : //z 2015-09-24 22:09:54 L.98 '6606  T241670331 .K ~761 +----+----+----+----+----+
+     TimeCnt : //z 2015-09-24 22:04:52 L.98 '6908  T241490644 .K ~36  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-09-24 20:55:24 L.98 '11076 T1959487447.K ~30  +----+----+----+----+----+
+     #30  R+ : //z 2015-09-24 20:55:24 L.98 '11076 T1959487447.K ~30    V+.779  L+.821  
      #29  R+ : //z 2015-09-22 17:22:14 L.100'23866 T2601790260.K ~29    V+.776  L+.813  
      #28  R+ : //z 2015-08-18 18:06:06 L.135'21234 T728764508 .K ~28    V+.653  L+.691  
      #27  R+ : //z 2015-08-13 17:31:56 L.140'23284 T3396635193.K ~27    V+.583  L+.642  
@@ -132,7 +133,8 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-09-22 17:22:22 L.100'23858 T2601790291.K ~778   R+.29   L+.815  --+----+
+     Version : //z 2015-09-24 22:09:54 L.98 '6606  T241670331 .K ~791   R+.30   L+.829  --+----+
+     #41  R+ : //z 2015-09-24 20:55:24 L.98 '11076 T1959487447.K ~779   R+.30   L+.822  V+.779  
      #40  R+ : //z 2015-09-22 17:22:14 L.100'23866 T2601790260.K ~776   R+.29   L+.814  V+.776  
      #40  V+ : //z 2015-09-07 09:52:04 L.115'50876 T1383629914.K ~760   R+.28   L+.798  
      #39  V+ : //z 2015-09-04 22:39:16 L.118'4844  T65304378  .K ~741   R+.28   L+.779  
@@ -814,3 +816,16 @@ http://blog.csdn.net/fox64194167/article/details/8073920
 01. 
 http://www.euclideanspace.com/maths/geometry/rotations/conversions/matrixToEuler/
 #endregion //z 2015-09-22 17:22:14 L.100'23866 BG57IV3@XCL T2601790260.K.F4146951713-+----+----+
+
+#region 09-24 20:55 R#.30   @matrix
+//z 2015-09-24 20:55:28 L.98 '11072 T1959487451.K[T35,L821,R30,V781]
+01. 
+//z 2015-09-24 22:04:52 L.98 '6908  T241490644 .K[T36,L823,R30,V785] 矩阵操作
+https://github.com/gamedevforks/LibGizmo
+Open 3D Model Viewer - A quick and powerful 3D model viewer http://www.open3mod.com
+https://github.com/gamedevforks/open3mod
+an open source c++ 3d skeletal animation engine
+https://github.com/gamedevforks/ozz-animation
+Godot is a fully featured, open source, MIT licensed, game engine.
+https://github.com/gamedevforks/godot.git
+#endregion //z 2015-09-24 20:55:24 L.98 '11076 BG57IV3@BYH T1959487447.K.F4146951713-+----+----+
