@@ -3666,3 +3666,13 @@ Changes to be committed:
 	modified:   History.txt
 	modified:   ZGame/game_tutorials/Direct3D/3DS Model Loader/ModelLoader.vcxproj
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.09/24/2015.22_38_41.67.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Doc/K/T.2015.BugFree.cs
+	modified:   History.txt
+
